--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-link-http": "^1.5.16",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "fast-memoize": "^2.5.1",
     "graphql": "^14.5.5",
     "graphql-type-json": "^0.2.1",
     "lowdb": "^1.0.0",
