--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
+    "compression": "^1.7.4",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
